--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   },
   "homepage": "https://github.com/Pedro-Wilker/api-gestao-financeira#readme",
   "dependencies": {
+    "@types/joi": "^17.2.2",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
