--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "tsc --watch & nodemon dist/index.js"
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -47,6 +47,7 @@
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.10",
     "sequelize-cli": "^6.6.3",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
   }
 }
